# ocr_experiments

./: .gitignore  CHANDRA.md  CLAUDE.md  README.md  run.sh
frontend/: index.html  package-lock.json  package.json  rasterize.sh  vite.config.js
frontend/public/: pdfs
frontend/src/: App.jsx  ExperimentPdf.jsx  FolderPicker.jsx  Markdown.jsx  MarkdownViewer.jsx  PdfViewer.jsx  index.css  mdrepair.js  models.js
harness/: pyproject.toml
harness/ocr_harness/: __init__.py
inference/: .gitignore  README.md  pyproject.toml  run.sh  serve.sh
inference/ocr/: __main__.py  config.py  discover.py  engine.py  orient.py  report.py
models/chandra/: pyproject.toml  run.py
models/closed_apis/: pyproject.toml  run.py
models/dots_ocr/: pyproject.toml  run.py
models/glm_ocr/: pyproject.toml  run.py
models/got_ocr/: pyproject.toml  run.py
models/lightonocr/: pyproject.toml  run.py
models/mineru/: pyproject.toml  run.py
models/paddleocr_vl/: pyproject.toml  run.py
models/surya/: pyproject.toml  run.py
models/unlimited_ocr/: pyproject.toml  run.py
models/vllm_server/: pyproject.toml
scripts/: compare.py  mineru_vllm_model.py  orient_prepass.py  reclaim.sh  serve_chandra.sh
