[project]
name = "ocr-harness"
version = "0.1.0"
description = "Shared runner: pdf rendering, per-page checkpointing, metrics"
requires-python = ">=3.10"
dependencies = [
    "pypdfium2>=4.30",
    "pillow>=10",
    "numpy",
    "pypdf>=4",
    # page-rotation correction (orient_pdf): PP-LCNet 4-class doc-orientation classifier,
    # onnxruntime backend so no model here needs paddlepaddle or a GPU for this.
    "paddleocr>=3.7",
    "onnxruntime",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ocr_harness"]
