[project]
name = "got-ocr-run"
version = "0.0.0"
requires-python = ">=3.11,<3.13"
# torch is capped below 2.11: 2.11+ ships CUDA 13.0 wheels (+cu130), needing driver
# >= 580. This pod's driver is 570.x (CUDA 12.8), so cu128 (torch 2.10) is the ceiling.
# The old unpinned `torch>=2.4` resolved to 2.11 and failed at cuda init.
dependencies = [
    "ocr-harness",
    "torch>=2.10,<2.11",
    "torchvision>=0.25,<0.26",
    "transformers>=4.48,<5",
    "accelerate>=1.0",
    "pillow>=10",
    "hf-transfer>=0.1.9",  # HF_HUB_ENABLE_HF_TRANSFER=1 is set in this image
]

[tool.uv.sources]
ocr-harness = { path = "../../harness", editable = true }
