[project]
name = "mineru-run"
version = "0.0.0"
requires-python = ">=3.11,<3.13"
# mineru[core] == mineru[vlm] + mineru[pipeline]; vllm lives only in the (unused)
# mineru[vllm] extra, so the transformers backend needs no vllm at all.
# torch is capped below 2.11 (cu130 wheels need driver >= 580; this pod is on 570.x /
# CUDA 12.8) — mineru itself only asks for torch>=2.6,<3, which would resolve to cu130.
dependencies = [
    "ocr-harness",
    "mineru[core]",
    "torch>=2.10,<2.11",
    "torchvision>=0.25,<0.26",
    "hf-transfer>=0.1.9",  # HF_HUB_ENABLE_HF_TRANSFER=1 is set in this image
]

[tool.uv.sources]
ocr-harness = { path = "../../harness", editable = true }
